@@ -1,3 +1,9 @@
-javac -d ./bin ./src/*.java
+@REM javac -d ./bin ./src/*.java
 
-java -cp ./bin ExecutablePendu
+@REM java -cp ./bin ExecutablePendu
+
+
+
+javac -d ./bin --module-path C:\Julian\lib_java\javafx-sdk-22 --add-modules javafx.controls ./src/*.java
+
+java -cp "bin;img" --module-path C:\Julian\lib_java\javafx-sdk-22 --add-modules javafx.controls Pendu
